# asr

./: .gitignore  README.md  pnpm-lock.yaml
apps/service/: README.md  pyproject.toml
apps/service/app/: main.py
apps/service/app/api/: health.py  websocket.py
apps/service/app/asr/: __init__.py  base.py  factory.py  mock_provider.py  qwen3_asr.py
apps/service/app/audio/: __init__.py  chunks.py
apps/service/app/core/: __init__.py  auth.py  config.py
apps/service/app/realtime/: __init__.py  protocol.py
apps/service/app/schemas/: events.py
apps/service/app/sessions/: __init__.py  session.py
apps/service/tests/: test_auth.py  test_qwen3_asr.py
apps/web/: components.json  index.html  oxlint.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/public/: pcm-processor.js
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx
apps/web/src/features/transcription/audio/: microphone-stream.ts
apps/web/src/features/transcription/realtime/: protocol.ts  transcription-socket.ts
apps/web/src/features/transcription/state/: useTranscriptionSession.ts
apps/web/src/features/transcription/ui/: TranscriptionConsole.tsx
apps/web/src/styles/: globals.css
docs/: api.md  backend-deploy-lightning.md  deployment-lightning.md  project-plan.md
