[project]
name = "asr-service"
version = "0.1.0"
description = "FastAPI streaming ASR service for browser microphone transcription."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.7.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
qwen = [
  "qwen-asr[vllm]",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
